// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should render correct AddReviewForm 1`] = `
<div
  className="add-review"
>
  <form
    action="#"
    className="add-review__form"
    disabled={false}
    onSubmit={[Function]}
  >
    <div
      className="rating"
    >
      <div
        className="rating__stars"
      >
        <input
          checked={false}
          className="rating__input"
          disabled={false}
          id="star-1"
          name="rating"
          onChange={[Function]}
          type="radio"
          value="1"
        />
        <label
          className="rating__label"
          htmlFor="star-1"
        >
          Rating 
          1
        </label>
        <input
          checked={false}
          className="rating__input"
          disabled={false}
          id="star-2"
          name="rating"
          onChange={[Function]}
          type="radio"
          value="2"
        />
        <label
          className="rating__label"
          htmlFor="star-2"
        >
          Rating 
          2
        </label>
        <input
          checked={false}
          className="rating__input"
          disabled={false}
          id="star-3"
          name="rating"
          onChange={[Function]}
          type="radio"
          value="3"
        />
        <label
          className="rating__label"
          htmlFor="star-3"
        >
          Rating 
          3
        </label>
        <input
          checked={false}
          className="rating__input"
          disabled={false}
          id="star-4"
          name="rating"
          onChange={[Function]}
          type="radio"
          value="4"
        />
        <label
          className="rating__label"
          htmlFor="star-4"
        >
          Rating 
          4
        </label>
        <input
          checked={false}
          className="rating__input"
          disabled={false}
          id="star-5"
          name="rating"
          onChange={[Function]}
          type="radio"
          value="5"
        />
        <label
          className="rating__label"
          htmlFor="star-5"
        >
          Rating 
          5
        </label>
      </div>
    </div>
    <div
      className="add-review__text"
      style={
        Object {
          "backgroundColor": "#1071311",
        }
      }
    >
      <textarea
        className="add-review__textarea"
        disabled={false}
        id="review-text"
        name="review"
        onChange={[Function]}
        placeholder="Review text"
        value="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ut dolor vel neque vestibulum ullamcorper. Quisque vulputate lobortis consectetur. Nulla enim odio, efficitur eget mattis non, tristique sit amet nisl. Etiam sed purus lorem. Proin at quam varius, molestie tellus ac, vulputate ante."
      />
      <div
        className="add-review__submit"
      >
        <button
          className="add-review__btn"
          disabled={false}
          type="submit"
        >
          Post
        </button>
      </div>
    </div>
  </form>
</div>
`;

exports[`Should render locked AddReviewForm 1`] = `
<div
  className="add-review"
>
  <form
    action="#"
    className="add-review__form"
    disabled={true}
    onSubmit={[Function]}
  >
    <div
      className="rating"
    >
      <div
        className="rating__stars"
      >
        <input
          checked={false}
          className="rating__input"
          disabled={true}
          id="star-1"
          name="rating"
          onChange={[Function]}
          type="radio"
          value="1"
        />
        <label
          className="rating__label"
          htmlFor="star-1"
        >
          Rating 
          1
        </label>
        <input
          checked={false}
          className="rating__input"
          disabled={true}
          id="star-2"
          name="rating"
          onChange={[Function]}
          type="radio"
          value="2"
        />
        <label
          className="rating__label"
          htmlFor="star-2"
        >
          Rating 
          2
        </label>
        <input
          checked={false}
          className="rating__input"
          disabled={true}
          id="star-3"
          name="rating"
          onChange={[Function]}
          type="radio"
          value="3"
        />
        <label
          className="rating__label"
          htmlFor="star-3"
        >
          Rating 
          3
        </label>
        <input
          checked={false}
          className="rating__input"
          disabled={true}
          id="star-4"
          name="rating"
          onChange={[Function]}
          type="radio"
          value="4"
        />
        <label
          className="rating__label"
          htmlFor="star-4"
        >
          Rating 
          4
        </label>
        <input
          checked={false}
          className="rating__input"
          disabled={true}
          id="star-5"
          name="rating"
          onChange={[Function]}
          type="radio"
          value="5"
        />
        <label
          className="rating__label"
          htmlFor="star-5"
        >
          Rating 
          5
        </label>
      </div>
    </div>
    <div
      className="add-review__text"
      style={
        Object {
          "backgroundColor": "#1071311",
        }
      }
    >
      <textarea
        className="add-review__textarea"
        disabled={true}
        id="review-text"
        name="review"
        onChange={[Function]}
        placeholder="Review text"
        value="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ut dolor vel neque vestibulum ullamcorper. Quisque vulputate lobortis consectetur. Nulla enim odio, efficitur eget mattis non, tristique sit amet nisl. Etiam sed purus lorem. Proin at quam varius, molestie tellus ac, vulputate ante."
      />
      <div
        className="add-review__submit"
      >
        <button
          className="add-review__btn"
          disabled={true}
          type="submit"
        >
          Post
        </button>
      </div>
    </div>
  </form>
</div>
`;
